# ask-cli

./: .gitignore  Cargo.toml  Makefile  README.md  chat.sql  chat2.sql  chat3.sql  chat4.sql  chat4.sql-shm  chat4.sql-wal
.github/workflows/: compile-and-release.yml.old  cross-compile.yml  release.yml
.sqlx/: query-09ec87fd97fed121cc61656520c44d5e8030c9dcb7db870b9ed677c543739a99.json  query-2cf4e91c50474fee09ea41a6d0922c073ec38072e5a5f13dddc69eb9caf2ba45.json  query-846ec048b723c73baf6b6f7df6979f20791f68a3570d10138f0a42c9f3a08c0c.json  query-c8a4a4e23ba10ad1a6f95b432b16c64758e12cebdc88f74613e998679d78286c.json  query-f42459b52b65ebbdaae09270bc530e7ab21f8ed82c3178db178a328137811bc8.json
migrations/: 20230925094526_chat.sql
src/: api.rs  app.rs  chat.rs  db.rs  input.rs  installer.sh  main.rs  state.rs  textarea.rs  ui.rs  utils.rs
src/apis/: openai.rs
src/handlers/: normal.rs
src/traits/: api_client.rs
