[package]
name = "ask-cli"
version = "1.0.8"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.4.0", features = ["derive"]}
crossterm = "0.27.0"
inquire = { version = "0.6.2", features = ["editor"] }
openai-rust = "0.5.1"
tokio = { version = "1", features = ["full"] }
